--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -11,6 +11,10 @@
     "defaultMessage": "Aller à l'index",
     "description": "Description du lien"
   },
+  "T/a40M": {
+    "defaultMessage": "Basculer le thème",
+    "description": "Basculer le thème Description du bouton"
+  },
   "Yz1BIF": {
     "defaultMessage": "Aller à À propos",
     "description": "Description du lien"
