typography integrated, common functions restructured,  navigation animations added

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -43,6 +43,10 @@
     "defaultMessage": "Go to About",
     "description": "Link description"
   },
+  "ZG77Sq": {
+    "defaultMessage": "close",
+    "description": "close button"
+  },
   "jxfpT4": {
     "defaultMessage": "Go to Games",
     "description": "Link description"
