--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -11,9 +11,15 @@
     "defaultMessage": "This is more options page",
     "description": "More options Page"
   },
+  "5sg7KC": {
+    "defaultMessage": "Password"
+  },
   "9ppS9d": {
     "defaultMessage": "Go to Class",
     "description": "class navigation button"
+  },
+  "AyGauy": {
+    "defaultMessage": "Login"
   },
   "C8CsWY": {
     "defaultMessage": "This is Class page",
@@ -35,6 +41,12 @@
     "defaultMessage": "This is challenges page",
     "description": "Challenges Page"
   },
+  "NU0Nha": {
+    "defaultMessage": "Forgot Password?"
+  },
+  "Op5EHr": {
+    "defaultMessage": "Sign in with Google"
+  },
   "T/a40M": {
     "defaultMessage": "Toggle Theme",
     "description": "Toggle theme Button description"
@@ -46,6 +58,9 @@
   "ZG77Sq": {
     "defaultMessage": "close",
     "description": "close button"
+  },
+  "flaX9K": {
+    "defaultMessage": "Create a New Account"
   },
   "jxfpT4": {
     "defaultMessage": "Go to Games",
@@ -62,9 +77,6 @@
   "sM7xfR": {
     "defaultMessage": "This is Home page",
     "description": "Page description"
-  },
-  "sZIPDd": {
-    "defaultMessage": "Signin page"
   },
   "swkU6w": {
     "defaultMessage": "Go to Home",
