add nav bar with changing the visual order of login and signwithgoogle btn

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -54,6 +54,9 @@
   "Op5EHr": {
     "defaultMessage": "Sign in with Google"
   },
+  "SENRqu": {
+    "defaultMessage": "Help"
+  },
   "T/a40M": {
     "defaultMessage": "Toggle Theme",
     "description": "Toggle theme Button description"
