--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -96,6 +96,12 @@
     "defaultMessage": "Create a New Account",
     "description": "Create Account Button"
   },
+  "dswY2R": {
+    "defaultMessage": "Phone or Email"
+  },
+  "flaX9K": {
+    "defaultMessage": "Create a New Account"
+  },
   "jxfpT4": {
     "defaultMessage": "Go to Games",
     "description": "Link description"
