change signin to login

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -92,9 +92,15 @@
     "defaultMessage": "Something went wrong. Please try again",
     "description": "error modal"
   },
+  "ZzmCII": {
+    "defaultMessage": "Enter a valid username"
+  },
   "a2ZCmv": {
     "defaultMessage": "Create a New Account",
     "description": "Create Account Button"
+  },
+  "d2TkEc": {
+    "defaultMessage": "Password or username does not match"
   },
   "dswY2R": {
     "defaultMessage": "Phone or Email"
