--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -18,6 +18,9 @@
     "defaultMessage": "Login",
     "description": "Login Button"
   },
+  "9+Ddtu": {
+    "defaultMessage": "Next"
+  },
   "9ppS9d": {
     "defaultMessage": "Go to Class",
     "description": "class navigation button"
@@ -41,6 +44,9 @@
     "defaultMessage": "Go to More",
     "description": "Home Navigation Button"
   },
+  "HAlOn1": {
+    "defaultMessage": "Name"
+  },
   "JCIgkj": {
     "defaultMessage": "Username"
   },
@@ -55,6 +61,9 @@
   "NU0Nha": {
     "defaultMessage": "Forgot Password?"
   },
+  "O95R3Z": {
+    "defaultMessage": "Phone"
+  },
   "PqOEWh": {
     "defaultMessage": "Login with OTP"
   },
@@ -64,6 +73,9 @@
   "T/a40M": {
     "defaultMessage": "Toggle Theme",
     "description": "Toggle theme Button description"
+  },
+  "U6eTZW": {
+    "defaultMessage": "Parent's Name"
   },
   "Yz1BIF": {
     "defaultMessage": "Go to About",
@@ -108,5 +120,8 @@
   "swkU6w": {
     "defaultMessage": "Go to Home",
     "description": "Link description"
+  },
+  "sy+pv5": {
+    "defaultMessage": "Email"
   }
 }
