--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,9 +7,25 @@
     "defaultMessage": "This is index page",
     "description": "Page description"
   },
+  "1FjMUC": {
+    "defaultMessage": "Forgot Password?",
+    "description": "forgot password link"
+  },
+  "1x4WPP": {
+    "defaultMessage": "Create a New Account",
+    "description": "Create a New Account heading"
+  },
   "383EZ1": {
     "defaultMessage": "This is more options page",
     "description": "More options Page"
+  },
+  "3Wcqsy": {
+    "defaultMessage": "Next",
+    "description": "Next button"
+  },
+  "5L6FVQ": {
+    "defaultMessage": "Password",
+    "description": "Password Field"
   },
   "5sg7KC": {
     "defaultMessage": "Password"
@@ -18,18 +34,29 @@
     "defaultMessage": "Login",
     "description": "Login Button"
   },
-  "8lFjcp": {
-    "defaultMessage": "Login Into Existing Account"
+  "6o79ty": {
+    "defaultMessage": "Login with OTP",
+    "description": "Login with OTP button"
   },
-  "9+Ddtu": {
-    "defaultMessage": "Next"
+  "7IJhPE": {
+    "defaultMessage": "Enter a valid Phone or Email",
+    "description": "Phone or Email form helper"
+  },
+  "7xoBRq": {
+    "defaultMessage": "Phone or Email",
+    "description": "Phone or Email label"
+  },
+  "9gqH2W": {
+    "defaultMessage": "Login",
+    "description": "Login button"
   },
   "9ppS9d": {
     "defaultMessage": "Go to Class",
     "description": "class navigation button"
   },
-  "AyGauy": {
-    "defaultMessage": "Login"
+  "B7znij": {
+    "defaultMessage": "Create a New Account",
+    "description": "Create a New Account button"
   },
   "C8CsWY": {
     "defaultMessage": "This is Class page",
@@ -43,12 +70,17 @@
     "defaultMessage": "hackerkid logo",
     "description": "logo"
   },
+  "DuPnGd": {
+    "defaultMessage": "Email",
+    "description": "Email label"
+  },
   "EG430K": {
     "defaultMessage": "Go to More",
     "description": "Home Navigation Button"
   },
-  "HAlOn1": {
-    "defaultMessage": "Name"
+  "G0CGdx": {
+    "defaultMessage": "Enter a valid Parent's name",
+    "description": "Parent's name form helper"
   },
   "JCIgkj": {
     "defaultMessage": "Username"
@@ -61,14 +93,9 @@
     "defaultMessage": "This is challenges page",
     "description": "Challenges Page"
   },
-  "NU0Nha": {
-    "defaultMessage": "Forgot Password?"
-  },
-  "O95R3Z": {
-    "defaultMessage": "Phone"
-  },
-  "PqOEWh": {
-    "defaultMessage": "Login with OTP"
+  "OdODwS": {
+    "defaultMessage": "Create Account",
+    "description": "Create Account button"
   },
   "SENRqu": {
     "defaultMessage": "Help"
@@ -77,8 +104,13 @@
     "defaultMessage": "Toggle Theme",
     "description": "Toggle theme Button description"
   },
-  "U6eTZW": {
-    "defaultMessage": "Parent's Name"
+  "UmuBIc": {
+    "defaultMessage": "Enter a phone number",
+    "description": "Phone label form helper"
+  },
+  "VsWMVt": {
+    "defaultMessage": "Re-type password",
+    "description": "Re-type password label"
   },
   "Yz1BIF": {
     "defaultMessage": "Go to About",
@@ -88,25 +120,33 @@
     "defaultMessage": "close",
     "description": "close button"
   },
-  "ZzmCII": {
-    "defaultMessage": "Enter a valid username"
-  },
   "a2ZCmv": {
     "defaultMessage": "Create a New Account",
     "description": "Create Account Button"
   },
-  "d2TkEc": {
-    "defaultMessage": "Password or username does not match"
+  "bwmSIS": {
+    "defaultMessage": "Enter a valid Name",
+    "description": "Name form helper"
   },
-  "dswY2R": {
-    "defaultMessage": "Phone or Email"
+  "fOZCSk": {
+    "defaultMessage": "Set a Password",
+    "description": "Set password label"
   },
-  "flaX9K": {
-    "defaultMessage": "Create a New Account"
+  "g2zl2J": {
+    "defaultMessage": "Login Into Existing Account",
+    "description": "Login Into existing account button"
+  },
+  "gOkIvb": {
+    "defaultMessage": "Name",
+    "description": "Name label"
   },
   "jxfpT4": {
     "defaultMessage": "Go to Games",
     "description": "Link description"
+  },
+  "mtXEZg": {
+    "defaultMessage": "Parent's Name",
+    "description": "Parent's Name label"
   },
   "of2vJ9": {
     "defaultMessage": "This is Video page",
@@ -116,8 +156,9 @@
     "defaultMessage": "Go to Home",
     "description": "Home Navigation Button"
   },
-  "sIIxF0": {
-    "defaultMessage": "Re-type password"
+  "quRCCv": {
+    "defaultMessage": "Phone",
+    "description": "Phone label"
   },
   "sM7xfR": {
     "defaultMessage": "This is Home page",
@@ -127,10 +168,20 @@
     "defaultMessage": "Go to Home",
     "description": "Link description"
   },
-  "sy+pv5": {
-    "defaultMessage": "Email"
+  "uNKBuG": {
+    "defaultMessage": "Enter a valid password",
+    "description": "Set password form helper"
   },
-  "yc/UOo": {
-    "defaultMessage": "Set a Password"
+  "uXQw5/": {
+    "defaultMessage": "Password or username does not match",
+    "description": "Password form helper"
+  },
+  "ut7C3K": {
+    "defaultMessage": "Passwords do not match",
+    "description": "Re-type password form helper"
+  },
+  "xOy0Vc": {
+    "defaultMessage": "Enter a valid Email address",
+    "description": "Email form helper"
   }
 }
