change Signin to Login in mobile code

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -27,9 +27,6 @@
     "defaultMessage": "Password",
     "description": "Password Field"
   },
-  "5sg7KC": {
-    "defaultMessage": "Password"
-  },
   "6Cjk2D": {
     "defaultMessage": "Login",
     "description": "Login Button"
@@ -82,9 +79,6 @@
     "defaultMessage": "Enter a valid Parent's name",
     "description": "Parent's name form helper"
   },
-  "JCIgkj": {
-    "defaultMessage": "Username"
-  },
   "MS/biV": {
     "defaultMessage": "Go to Index",
     "description": "Link description"
@@ -99,6 +93,10 @@
   },
   "SENRqu": {
     "defaultMessage": "Help"
+  },
+  "SL6O2c": {
+    "defaultMessage": "Password",
+    "description": "Password label"
   },
   "T/a40M": {
     "defaultMessage": "Toggle Theme",
