add RouteRegister to App.js

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -31,6 +31,10 @@
     "defaultMessage": "Login",
     "description": "Login Button"
   },
+  "6V6DQY": {
+    "defaultMessage": "Next",
+    "description": "Next Button"
+  },
   "6o79ty": {
     "defaultMessage": "Login with OTP",
     "description": "Login with OTP button"
@@ -99,6 +103,10 @@
     "defaultMessage": "Create Account",
     "description": "Create Account button"
   },
+  "RHM1lo": {
+    "defaultMessage": "Re-type Password",
+    "description": "Re-type Password label"
+  },
   "SENRqu": {
     "defaultMessage": "Help"
   },
@@ -109,6 +117,10 @@
   "T/a40M": {
     "defaultMessage": "Toggle Theme",
     "description": "Toggle theme Button description"
+  },
+  "TVjEEI": {
+    "defaultMessage": "Create Account",
+    "description": "Create Account Button"
   },
   "UmuBIc": {
     "defaultMessage": "Enter a phone number",
@@ -145,6 +157,10 @@
   "gOkIvb": {
     "defaultMessage": "Name",
     "description": "Name label"
+  },
+  "hxLhGK": {
+    "defaultMessage": "Set Password",
+    "description": "Password Label"
   },
   "jxfpT4": {
     "defaultMessage": "Go to Games",
