--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3,25 +3,17 @@
     "defaultMessage": "This is games page",
     "description": "Games Page"
   },
-  "/dnxym": {
-    "defaultMessage": "Create a New Account",
-    "description": "create new account button"
-  },
-  "/itreP": {
-    "defaultMessage": "{label}",
-    "description": "help type label"
-  },
-  "/x0h9E": {
-    "defaultMessage": "Login with Phone",
-    "description": "login with phone tab"
+  "/ndV7b": {
+    "defaultMessage": "Coins Earned:",
+    "description": "coins earned"
   },
   "0JV99f": {
     "defaultMessage": "This is index page",
     "description": "Page description"
   },
-  "1FjMUC": {
-    "defaultMessage": "Forgot Password?",
-    "description": "forgot password link"
+  "0Sgdtj": {
+    "defaultMessage": "Game Progress",
+    "description": "game progress heading"
   },
   "1RUvaS": {
     "defaultMessage": "Profile Settings",
@@ -34,53 +26,32 @@
   "2W0f9h": {
     "defaultMessage": "Bio"
   },
-  "2bMdhC": {
-    "defaultMessage": "Create a New Account",
-    "description": "create a new account button"
-  },
-  "2yf2WH": {
-    "defaultMessage": "Login with Phone",
-    "description": "Login with Phone tab"
+  "2ua1yZ": {
+    "defaultMessage": "rank",
+    "description": "rank"
   },
   "383EZ1": {
     "defaultMessage": "This is more options page",
     "description": "More options Page"
   },
-  "3Wcqsy": {
-    "defaultMessage": "Next",
-    "description": "Next button"
-  },
   "4Ve1r3": {
     "defaultMessage": "Ok",
     "description": "confirm btn"
   },
-  "5L6FVQ": {
-    "defaultMessage": "Password",
-    "description": "Password Field"
+  "5sg7KC": {
+    "defaultMessage": "Password"
+  },
+  "6+MZGf": {
+    "defaultMessage": "Challenges",
+    "description": "challenges heading"
   },
   "6Cjk2D": {
     "defaultMessage": "Login",
     "description": "Login Button"
   },
-  "6FPmdk": {
-    "defaultMessage": "Filter",
-    "description": "Filter button"
-  },
-  "6V6DQY": {
-    "defaultMessage": "Next",
-    "description": "Next Button"
-  },
-  "74UjvK": {
-    "defaultMessage": "Login to existing Account",
-    "description": "Login to existing account button"
-  },
-  "7L3+7M": {
-    "defaultMessage": "Login into existing account",
-    "description": "Login into existing account button"
-  },
-  "9YoD+Y": {
-    "defaultMessage": "New Password",
-    "description": "New Password Label"
+  "6NWftj": {
+    "defaultMessage": "Challenges",
+    "description": "Challenges card heading"
   },
   "9gqH2W": {
     "defaultMessage": "Login",
@@ -114,13 +85,25 @@
     "defaultMessage": "Try again",
     "description": "try again btn"
   },
+  "BIWKGG": {
+    "defaultMessage": "Time Spent:",
+    "description": "time spent heading text"
+  },
   "C8CsWY": {
     "defaultMessage": "This is Class page",
     "description": "Class Page"
   },
+  "CcB4fo": {
+    "defaultMessage": "Coins Earned:",
+    "description": "Coins Earned"
+  },
   "D/2aSY": {
     "defaultMessage": "This is about page",
     "description": "Page description"
+  },
+  "DBTgpi": {
+    "defaultMessage": "completed",
+    "description": "completed"
   },
   "DZ21OO": {
     "defaultMessage": "Bio",
@@ -138,33 +121,9 @@
     "defaultMessage": "Go to More",
     "description": "Home Navigation Button"
   },
-  "EhuHU0": {
-    "defaultMessage": "{errorMessage}",
-    "description": "password form helper"
-  },
-  "F/vOH1": {
-    "defaultMessage": "Forgot Password",
-    "description": "Forgot Password heading"
-  },
-  "FhTUgw": {
-    "defaultMessage": "Not {phone} ?",
-    "description": "not button"
-  },
-  "G0AqB8": {
-    "defaultMessage": "Login into Existing Account",
-    "description": "Login into Exisiting Account button"
-  },
-  "GQwBTI": {
-    "defaultMessage": "Verify OTP and proceed",
-    "description": "verify otp button"
-  },
-  "Gon8SN": {
-    "defaultMessage": "Login with Email",
-    "description": "Login with email tab"
-  },
-  "H2rvzb": {
-    "defaultMessage": "Password changed successfully",
-    "description": "Password changed text"
+  "FIcBXp": {
+    "defaultMessage": "Home",
+    "description": "home heading"
   },
   "HAlOn1": {
     "defaultMessage": "Name"
@@ -173,13 +132,16 @@
     "defaultMessage": "Save",
     "description": "Profile save button"
   },
-  "In3suu": {
-    "defaultMessage": "{errorMessage}",
-    "description": "error text"
+  "HbJPsh": {
+    "defaultMessage": "All Challenges",
+    "description": "all challenges"
   },
-  "JnwRMJ": {
-    "defaultMessage": "OTP",
-    "description": "OTP label"
+  "JCIgkj": {
+    "defaultMessage": "Username"
+  },
+  "MB8h2I": {
+    "defaultMessage": "Leaderboard Ranking",
+    "description": "Leaderboard card heading text"
   },
   "MS/biV": {
     "defaultMessage": "Go to Index",
@@ -201,6 +163,18 @@
     "defaultMessage": "Create Account",
     "description": "Create Account button"
   },
+  "OvWf0W": {
+    "defaultMessage": "Class",
+    "description": "class nav text"
+  },
+  "PSx95N": {
+    "defaultMessage": "Home",
+    "description": "Home card heading"
+  },
+  "Qvy78L": {
+    "defaultMessage": "Profile",
+    "description": "profile heading"
+  },
   "R5SEEt": {
     "defaultMessage": "Close",
     "description": "close button"
@@ -221,9 +195,25 @@
     "defaultMessage": "{errorMessage}",
     "description": "phoneNumber form helper"
   },
-  "T/a40M": {
-    "defaultMessage": "Toggle Theme",
-    "description": "Toggle theme Button description"
+  "TmcPug": {
+    "defaultMessage": "Edit Profile",
+    "description": "edit profile"
+  },
+  "UUCx/J": {
+    "defaultMessage": "Edit",
+    "description": "edit profile"
+  },
+  "Y+dh5z": {
+    "defaultMessage": "Edit Profile",
+    "description": "Home card menu"
+  },
+  "YImSKa": {
+    "defaultMessage": "You are not authorized to access this page.",
+    "description": "Not authorized message"
+  },
+  "YxMMzC": {
+    "defaultMessage": "All Games",
+    "description": "Game Progress card menu"
   },
   "TS73XZ": {
     "defaultMessage": "Change password",
@@ -265,76 +255,59 @@
     "defaultMessage": "Create a New Account",
     "description": "Create Account Button"
   },
+  "bK9TWX": {
+    "defaultMessage": "Leaderboard Rank",
+    "description": "leaderboard rank heading"
+  },
   "c9n6Sh": {
     "defaultMessage": "School"
+  },
+  "d1eDsY": {
+    "defaultMessage": "Loading...",
+    "description": "Loading..."
   },
   "e5Eaen": {
     "defaultMessage": "Profile updated successfully",
     "description": "success modal"
   },
-  "fOZCSk": {
-    "defaultMessage": "Set a Password",
-    "description": "Set password label"
+  "f1vl6A": {
+    "defaultMessage": "Show Leaderboard",
+    "description": "show leaderboard"
   },
-  "g2zl2J": {
-    "defaultMessage": "Login Into Existing Account",
-    "description": "Login Into existing account button"
+  "flaX9K": {
+    "defaultMessage": "Create a New Account"
   },
-  "gHMD5/": {
-    "defaultMessage": "{modalTitle}",
-    "description": "modal title"
-  },
-  "gOkIvb": {
-    "defaultMessage": "Name",
-    "description": "Name label"
+  "g0zp7w": {
+    "defaultMessage": "Continue Playing",
+    "description": "Game Progress card primary button"
   },
   "h7B/gA": {
     "defaultMessage": "store authtoken",
     "description": "authtoken temp storage btn"
   },
-  "hJpqIn": {
-    "defaultMessage": "Send OTP",
-    "description": "send otp button"
-  },
-  "hphOHh": {
-    "defaultMessage": "Help",
-    "description": "help button"
-  },
-  "hxLhGK": {
-    "defaultMessage": "Set Password",
-    "description": "Password Label"
-  },
-  "jZhy7I": {
-    "defaultMessage": "Forgot Password",
-    "description": "Forgot Password Heading"
-  },
-  "jxfpT4": {
-    "defaultMessage": "Go to Games",
-    "description": "Link description"
-  },
   "lKeCea": {
     "defaultMessage": "Save & Exit",
     "description": "Profile save button"
   },
-  "lynO1X": {
-    "defaultMessage": "Change Password",
-    "description": "Change password button text"
-  },
-  "mDpOZM": {
-    "defaultMessage": "OTP",
-    "description": "OTP Label"
+  "mEFtca": {
+    "defaultMessage": "Continue Challenge",
+    "description": "Game Progress card primary button"
   },
   "mm9QaY": {
     "defaultMessage": "School",
     "description": "Profile school label"
   },
-  "mtXEZg": {
-    "defaultMessage": "Parent's Name",
-    "description": "Parent's Name label"
+  "n45USK": {
+    "defaultMessage": "rank",
+    "description": "sheet card subtitle"
   },
-  "nT6Ql7": {
-    "defaultMessage": "{text}",
-    "description": "help type text"
+  "nlYt8p": {
+    "defaultMessage": "View more",
+    "description": "View More Bottomsheet Btn"
+  },
+  "oJe49d": {
+    "defaultMessage": "All Challenges",
+    "description": "Challenges card menu"
   },
   "of2vJ9": {
     "defaultMessage": "This is Video page",
@@ -344,6 +317,10 @@
     "defaultMessage": "Go to Profile",
     "description": "Link description"
   },
+  "pwy4hs": {
+    "defaultMessage": "Game Progress",
+    "description": "Game Progress card heading"
+  },
   "q86PwV": {
     "defaultMessage": "Go to Home",
     "description": "Home Navigation Button"
@@ -351,25 +328,29 @@
   "qXTiEd": {
     "defaultMessage": "Grade"
   },
-  "quRCCv": {
-    "defaultMessage": "Phone",
-    "description": "Phone label"
-  },
-  "sM7xfR": {
-    "defaultMessage": "This is Home page",
-    "description": "Page description"
+  "rECW1h": {
+    "defaultMessage": "completed",
+    "description": "Game Progress card caption"
   },
   "swkU6w": {
     "defaultMessage": "Go to Home",
     "description": "Link description"
   },
-  "uhayi4": {
-    "defaultMessage": "{errorMessage}",
-    "description": "email form helper"
+  "tsF0aG": {
+    "defaultMessage": "Continue Playing",
+    "description": "continue playing"
   },
-  "x8lXTv": {
-    "defaultMessage": "Resend",
-    "description": "Resend otp button text"
+  "vChW6P": {
+    "defaultMessage": "Show Leaderboard",
+    "description": "Leaderboard show button"
+  },
+  "xT1NKB": {
+    "defaultMessage": "Games",
+    "description": "games nav text"
+  },
+  "xW6DFp": {
+    "defaultMessage": "Videos",
+    "description": "videos nav text"
   },
   "z9lFwl": {
     "defaultMessage": "Name",
