turtle output screen - partial

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -265,6 +265,10 @@
     "defaultMessage": "OTP",
     "description": "OTP label"
   },
+  "JNotzf": {
+    "defaultMessage": "Expected Output",
+    "description": "Collapse Title - Expected Output"
+  },
   "MB8h2I": {
     "defaultMessage": "Leaderboard Ranking",
     "description": "Leaderboard card heading text"
