register form step1 page valiadtion and api request done

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -137,6 +137,10 @@
     "defaultMessage": "Save",
     "description": "Profile save button"
   },
+  "In3suu": {
+    "defaultMessage": "{errorMessage}",
+    "description": "error text"
+  },
   "JnwRMJ": {
     "defaultMessage": "OTP",
     "description": "OTP label"
