turtle partial web

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -265,6 +265,10 @@
     "defaultMessage": "OTP",
     "description": "OTP label"
   },
+  "JNotzf": {
+    "defaultMessage": "Expected Output",
+    "description": "Collapse Title - Expected Output"
+  },
   "MB8h2I": {
     "defaultMessage": "Leaderboard Ranking",
     "description": "Leaderboard card heading text"
@@ -344,10 +348,6 @@
   "TbteVJ": {
     "defaultMessage": "{studentName}",
     "description": "student name"
-  },
-  "TKud4q": {
-    "defaultMessage": "Problem Statement",
-    "description": "Problem Statement"
   },
   "TmcPug": {
     "defaultMessage": "Edit Profile",
